# fastapi_simple_auth

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
static/: script.js  styles.css
templates/: login.html
